arvan-paas/grafana/service.yml
kind: Service
apiVersion: v1
metadata:
  name: grafana-svc
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: grafana
  type: ClusterIP
